@startuml ActionDomain
package "Action / Observation Domain" {
  class Action <<AggregateRoot>> {
    +actionId: UUID
    +userId: UUID
    +photoUrl: String
    +status: String
    +createdAt: DateTime

    +registerAction()
    +validate()
    +assignPoints(points: int)
    +markSynced()
  }

  class PlantVO <<VO>> {
    +plantId: UUID
    +speciesName: String
    +category: String
  }

  class LocationVO <<VO>> {
    +latitude: double
    +longitude: double
    +address: String
  }

  class GeoVerificationService <<DomainService>> {
    +verify(location: LocationVO): boolean
  }

  class PlantPlausibilityService <<DomainService>> {
    +check(plant: PlantVO, location: LocationVO): boolean
  }

  class PointsEngine <<DomainService>> {
    +calculatePoints(action: Action): int
  }

  Action --> PlantVO
  Action --> LocationVO
  Action ..> GeoVerificationService
  Action ..> PlantPlausibilityService
  Action ..> PointsEngine
}
@enduml
